# VAU

./: Cargo.toml  LICENCE  README.md
.github/workflows/: main.yml
cli/: main.rs
common/: ddb.rs  lib.rs  wav.rs
gui/: main.rs
gui/assets/: index.html
gui/assets/scripts/: rpc.js  ui.js
gui/assets/styles/: components.css  layout.css  palette.css  reset.css
