[package]
name = "vau"
version = "0.1.0"
authors = ["Shmish <shmish90@gmail.com>"]
edition = "2018"
autobins = false

[dependencies]
clap = "2.33.3"
tinyfiledialogs = "3.3.10"
rust-embed = "5.9.0"
actix-web = "3"
web-view = "0.7"
mime_guess = "2.0.3"

[lib]
name = "common"
path = "common/lib.rs"

[[bin]]
name = "cli"
path = "cli/main.rs"

[[bin]]
name = "gui"
path = "gui/main.rs"
